# meeting-summarizer

./: .coverage  .flake8  .gitignore  AGENTS.md  LICENSE  README.md  ai-study-gruop.yaml  pyproject.toml
.github/workflows/: ci.yml
src/meeting_summarizer/: __init__.py  cli.py  config.py  logging_config.py  models.py  openai_client.py  project.py  render.py
src/meeting_summarizer/analysis/: __init__.py  llm_stages.py  pipeline.py  service.py
src/meeting_summarizer/markdown/: __init__.py  cleaned.py  common.py  focus_areas.py  paths.py  project_display.py  summary.py
src/meeting_summarizer/transcripts/: __init__.py  parser.py
tests/: conftest.py  test_cli.py  test_config.py  test_logging_config.py  test_models.py  test_openai_client.py  test_parser.py  test_pipeline.py  test_project.py  test_render.py
tests/analysis/: test_llm_stages.py  test_pipeline.py  test_service.py
tests/markdown/: test_cleaned.py  test_common.py  test_focus_areas.py  test_paths.py  test_project_display.py  test_summary.py
tests/transcripts/: test_parser.py
